--- a/SwiftGif.xcodeproj/xcshareddata/xcschemes/SwiftGif.xcscheme
+++ b/SwiftGif.xcodeproj/xcshareddata/xcschemes/SwiftGif.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0800"
+   LastUpgradeVersion = "0920"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "14FF87D01D6B7BAA00FB208A"
-               BuildableName = "SwiftGif.framework"
-               BlueprintName = "SwiftGif"
+               BlueprintIdentifier = "14A76437194EFBB800A74B1F"
+               BuildableName = "SwiftGifDemo.app"
+               BlueprintName = "SwiftGifDemo"
                ReferencedContainer = "container:SwiftGif.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -26,6 +26,7 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      language = ""
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
@@ -36,21 +37,23 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      language = ""
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "14FF87D01D6B7BAA00FB208A"
-            BuildableName = "SwiftGif.framework"
-            BlueprintName = "SwiftGif"
+            BlueprintIdentifier = "14A76437194EFBB800A74B1F"
+            BuildableName = "SwiftGifDemo.app"
+            BlueprintName = "SwiftGifDemo"
             ReferencedContainer = "container:SwiftGif.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
